# unsnarl

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  WIP-visual-graph.md  bench-ir-parity.sh  design-2026-06-07-query-layer.md  design-2026-06-07-usability.md  knip.json  knip.jsonc  knip.ts  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
crates/unsnarl/: Cargo.toml
crates/unsnarl-analyzer/: Cargo.toml
crates/unsnarl-analyzer/src/: abrupt_completion_type_of.rs  abrupt_completion_type_of_test.rs  analyzed_source.rs  analyzer_fixtures.rs  annotations_impl.rs  annotations_impl_test.rs  block_context_of.rs  block_context_of_test.rs  build_analysis_visitor.rs  build_analysis_visitor_test.rs  build_head_expression.rs  build_head_expression_test.rs  case_exits_function.rs  case_exits_function_test.rs  case_falls_through.rs  case_falls_through_test.rs  collect_abrupt_statements.rs  compute_nesting_depths.rs  compute_nesting_depths_test.rs  expression_statement_container.rs  expression_statement_container_test.rs  find_completion.rs  find_completion_test.rs  find_jsx_element_span.rs  find_jsx_element_span_test.rs  find_predicate_container.rs  find_predicate_container_test.rs  format_case_test.rs  format_case_test_test.rs  format_var_diagnostic.rs  format_var_diagnostic_test.rs  if_chain_root_offset.rs  if_chain_root_offset_test.rs  is_control_exit.rs  is_control_exit_test.rs  is_unused.rs  is_unused_test.rs  lib.rs  owner.rs  path_entry.rs  (+6 more)
crates/unsnarl-analyzer/src/build_analysis_visitor/: callback_host.rs  callback_host_test.rs  fire_reference.rs  fire_reference_test.rs  fire_scope.rs  is_explicitly_handled.rs  path_cursor.rs
crates/unsnarl-analyzer/src/compute_nesting_depths/: counters.rs  visitor_helpers.rs
crates/unsnarl-analyzer/src/owner/: all_binding_variables.rs  all_binding_variables_test.rs  find_reference_owners.rs  find_reference_owners_test.rs
crates/unsnarl-annotations/: Cargo.toml
crates/unsnarl-annotations/src/: annotations.rs  lib.rs  reference_annotation.rs  reference_annotation_test.rs  scope_annotation.rs  scope_annotation_test.rs  variable_annotation.rs  variable_annotation_test.rs
crates/unsnarl-emitter-ir/: Cargo.toml
crates/unsnarl-emitter-ir/src/: ir.rs  lib.rs  serializer.rs
crates/unsnarl-emitter-ir/src/ir/: serialize_compact.rs  serialize_pretty.rs
crates/unsnarl-emitter-ir/src/serializer/: flat.rs
crates/unsnarl-emitter-json/: Cargo.toml
crates/unsnarl-emitter-json/src/: lib.rs  serialize_compact.rs  serialize_pretty.rs
crates/unsnarl-emitter-markdown/: Cargo.toml
crates/unsnarl-emitter-markdown/src/: code_fence_lang.rs  code_fence_lang_test.rs  format_depth_query.rs  format_depth_query_test.rs  format_highlight_query.rs  format_pruning_query.rs  lib.rs  markdown.rs
crates/unsnarl-emitter-markdown/src/format_depth_query/: format_depth_query_per_kind.rs
crates/unsnarl-emitter-mermaid/: Cargo.toml
crates/unsnarl-emitter-mermaid/src/: collect_edge_source_subgraph_ids.rs  collect_edge_source_subgraph_ids_test.rs  collect_edge_target_subgraph_ids.rs  collect_edge_target_subgraph_ids_test.rs  collect_highlight_edge_indices.rs  collect_highlight_edge_indices_test.rs  collect_import_sources.rs  collect_import_sources_test.rs  collect_nodes_into.rs  collect_nodes_into_test.rs  collect_subgraph_ids.rs  collect_subgraph_ids_test.rs  collect_wrapped_owner_ids.rs  collect_wrapped_owner_ids_test.rs  emit_node.rs  emit_node_test.rs  emit_plain_subgraph.rs  emit_plain_subgraph_test.rs  emit_subgraph.rs  emit_subgraph_test.rs  escape.rs  escape_test.rs  lib.rs  line_range_label.rs  line_range_label_test.rs  mermaid.rs  mermaid_fixtures.rs  mermaid_test.rs  node_head.rs  node_head_test.rs  node_label.rs  node_label_test.rs  node_syntax.rs  node_syntax_test.rs  push_edge_lines.rs  push_edge_lines_test.rs  record_nest_slot.rs  render_boundary_edges.rs  render_boundary_edges_test.rs  render_class_defs.rs  (+21 more)
crates/unsnarl-emitter-mermaid/src/strategy/: strategy_kind.rs  strategy_kind_test.rs
crates/unsnarl-emitter-mermaid/src/theme/: color_theme.rs  color_theme_test.rs  dark_theme.rs  dark_theme_test.rs  light_theme.rs  light_theme_test.rs  nest_palette_index.rs  nest_palette_index_test.rs
crates/unsnarl-emitter-stats/: Cargo.toml
crates/unsnarl-emitter-stats/src/: collect_nodes.rs  collect_nodes_test.rs  format_label.rs  format_label_test.rs  lib.rs  stats.rs  stats_test.rs
crates/unsnarl-ir/: Cargo.toml
crates/unsnarl-ir/src/: arena.rs  ast_type.rs  completion.rs  definition_type.rs  diagnostic.rs  diagnostic_kind.rs  filled_string.rs  ids.rs  import_kind.rs  language.rs  lib.rs  name.rs  nesting_kind.rs  nesting_kind_test.rs  non_empty.rs  non_empty_test.rs  predicate_container_type.rs  primitive.rs  reference.rs  scope.rs  scope_type.rs  serialized.rs  serialized_ir_version.rs  variable_declaration_kind.rs
crates/unsnarl-ir/src/completion/: completion_type.rs
crates/unsnarl-ir/src/primitive/: span.rs  (+6 more)
crates/unsnarl-oxc-boundary/: Cargo.toml
crates/unsnarl-oxc-boundary/src/: analysis_result.rs  analyze.rs  analyze_test.rs  ast_type_coverage_test.rs  lib.rs  materialise.rs  materialise_test.rs  oxc_semantic_adapter.rs  parser_test.rs  resolve.rs  testing.rs  visitor.rs
crates/unsnarl-plugin-react/: Cargo.toml
crates/unsnarl-plugin-react/src/: lib.rs  transform.rs  unsnarl_plugin_react.rs
crates/unsnarl-visual-graph/: Cargo.toml
crates/unsnarl-visual-graph/src/: boundary_edge_direction.rs  builder.rs  direction.rs  highlight.rs  lib.rs  node_kind.rs  prune.rs  subgraph_kind.rs  visual_boundary_edge.rs  visual_edge.rs  visual_element.rs  visual_element_type.rs  visual_graph.rs  visual_graph_pruning.rs  visual_node.rs  visual_node_test.rs  visual_subgraph.rs  visual_subgraph_test.rs
crates/unsnarl/src/: cli.rs  lib.rs  main.rs  pipeline.rs  pipeline_test.rs  run.rs  run_test.rs
crates/unsnarl/tests/: build_visual_graph.rs  cli_args.rs  cli_parity.rs  flat_serializer.rs  mermaid_emitter.rs  parity.rs
(+4346 files in other folders)
