[workspace]
resolver = "2"
members = [
    "crates/unsnarl-oxc-parity",
    "crates/unsnarl-instrumentation",
    "crates/unsnarl-ir",
    "crates/unsnarl-annotations",
    "crates/unsnarl-oxc-boundary",
    "crates/unsnarl-analyzer",
    "crates/unsnarl-root-query",
    "crates/unsnarl-visual-graph",
    "crates/unsnarl-emitter",
    "crates/unsnarl-emitter-ir",
    "crates/unsnarl-emitter-json",
    "crates/unsnarl-emitter-mermaid",
    "crates/unsnarl-emitter-markdown",
    "crates/unsnarl-emitter-stats",
    "crates/unsnarl-plugin",
    "crates/unsnarl-plugin-react",
    "crates/unsnarl",
    "crates/no-allow-dead-code",
]

[workspace.package]
version = "0.5.0-beta.0"
edition = "2021"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/crescware/unsnarl"

[workspace.dependencies]
unsnarl-oxc-parity = { path = "crates/unsnarl-oxc-parity" }
unsnarl-instrumentation = { path = "crates/unsnarl-instrumentation" }
unsnarl-ir = { path = "crates/unsnarl-ir" }
unsnarl-annotations = { path = "crates/unsnarl-annotations" }
unsnarl-oxc-boundary = { path = "crates/unsnarl-oxc-boundary" }
unsnarl-analyzer = { path = "crates/unsnarl-analyzer" }
unsnarl-root-query = { path = "crates/unsnarl-root-query" }
unsnarl-visual-graph = { path = "crates/unsnarl-visual-graph" }
unsnarl-emitter = { path = "crates/unsnarl-emitter" }
unsnarl-emitter-ir = { path = "crates/unsnarl-emitter-ir" }
unsnarl-emitter-json = { path = "crates/unsnarl-emitter-json" }
unsnarl-emitter-mermaid = { path = "crates/unsnarl-emitter-mermaid" }
unsnarl-emitter-markdown = { path = "crates/unsnarl-emitter-markdown" }
unsnarl-emitter-stats = { path = "crates/unsnarl-emitter-stats" }
unsnarl-plugin = { path = "crates/unsnarl-plugin" }
unsnarl-plugin-react = { path = "crates/unsnarl-plugin-react" }

oxc_parser = "=0.128.0"
oxc_ast = "=0.128.0"
oxc_ast_visit = "=0.128.0"
oxc_semantic = "=0.128.0"
oxc_syntax = "=0.128.0"
oxc_allocator = "=0.128.0"
oxc_span = "=0.128.0"
oxc_diagnostics = "=0.128.0"
oxc_index = { version = "=4.1.0", features = ["nonmax", "serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
libtest-mimic = "0.8.2"
pretty_assertions = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Deny `.unwrap()` workspace-wide (both production and tests).
# Bare `.unwrap()` discards the assumption being asserted — when it
# panics the trace points only at a line number. `.expect("...")`
# (or `?` when the failure is recoverable) forces the author to name
# the invariant being relied on, which is the information a failing
# test or production stack trace actually needs.
[workspace.lints.clippy]
unwrap_used = "deny"

# Release profile tuned for `uns` startup latency. Limited to
# compiler-level optimizations that do not discard information from
# the artifact: `lto = "thin"` lets the linker inline and dead-code-
# eliminate across crates, and `codegen-units = 1` lets each crate
# be optimized as a single unit rather than fragmented for parallel
# codegen. Settings that would shrink the binary by deleting useful
# data (`strip` removes symbols needed for production stack traces,
# `panic = "abort"` removes unwind tables at the cost of skipping
# `Drop` on panic for any future code path holding temp files /
# sockets / external resources) are deliberately omitted.
[profile.release]
lto = "thin"
codegen-units = 1
