[package]
name = "unsnarl-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-ir = { workspace = true }
unsnarl-annotations = { workspace = true }
unsnarl-boundary-eslint-scope = { workspace = true }
unsnarl-oxc-parity = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

[dev-dependencies]
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
serde_json = { workspace = true }
