[package]
name = "unsnarl-annotations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-ir = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
