[package]
name = "unsnarl-emitter-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-emitter = { workspace = true }
unsnarl-visual-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
