[package]
name = "unsnarl-emitter-mermaid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-emitter = { workspace = true }
unsnarl-visual-graph = { workspace = true }
unsnarl-ir = { workspace = true }
unsnarl-oxc-parity = { workspace = true }
unsnarl-instrumentation = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
