[package]
name = "unsnarl-emitter-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-emitter = { workspace = true }
unsnarl-visual-graph = { workspace = true }
unsnarl-ir = { workspace = true }
