[package]
name = "unsnarl-visual-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unsnarl-ir = { workspace = true }
unsnarl-annotations = { workspace = true }
unsnarl-instrumentation = { workspace = true }
unsnarl-oxc-parity = { workspace = true }
unsnarl-root-query = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
